<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/gradient"
        tools:context=".presentation.detail.DetailFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/goblin_one"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/llGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/archivo"
                        android:text="@string/Genres"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvGenres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/krona_one"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llZero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/llGenres"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/archivo"
                        android:text="@string/Added"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvAdded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/krona_one"

                        android:textColor="@color/white" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/llZero"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Released"
                        android:fontFamily="@font/archivo"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/tvReleased"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/krona_one"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llOneHalf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/llOne">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Updated"
                        android:fontFamily="@font/archivo"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                    <TextView

                        android:id="@+id/tvUpdated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/krona_one"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/llOneHalf"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rating"
                        android:fontFamily="@font/archivo"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />


                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/krona_one"

                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RatingTop"
                        android:fontFamily="@font/archivo"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/tvRatingTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/krona_one"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/llTwo"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Platforms"
                        android:fontFamily="@font/archivo"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/tvPlatforms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/krona_one"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/llThree"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewDetail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="horizontal"
                        android:scrollbarThumbHorizontal="@drawable/scrollbar_hor"
                        app:layout_constraintLeft_toLeftOf="parent" />


                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/llDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/cardViewDetail"

                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/archivo"
                        android:text="@string/Description"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:fontFamily="@font/krona_one"
                        android:textColor="@color/white" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </FrameLayout>
</layout>